--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     <a id="skip-to-content" href="#content"></a>
 
-    <header class="page-header" role="banner">
+    <header class="page-header" role="">
       <h3 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h3>
       <h3 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h3>
       {% if site.github.is_project_page %}
